# stock-monitor

./: .gitignore  README.md  pyproject.toml  service.sh
docs/: NOTIFICATIONS.md
service/: com.local.stock-monitor.plist.template  stock-monitor.logrotate  stock-monitor.service.template
stock_monitor/: __init__.py  __main__.py  cli.py  config.py  core.py  manager.py
stock_monitor/webui/: __init__.py  api.py  app.py
stock_monitor/webui/static/: app.js  index.html  style.css
tests/: test_api.py  test_calendar.py  test_config.py  test_manager.py
