[project]
name = "stock-monitor"
version = "0.1.0"
description = "A股股价监控 + 钉钉通知 + Web 管理界面"
requires-python = ">=3.13"
dependencies = [
    "cn-stock-holidays>=2.1.6",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
stock-monitor = "stock_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_monitor"]
